# pryx

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  BUILD_SYSTEM.md  BUILD_SYSTEM_IMPLEMENTATION.md  CHANGELOG.md  CLI_TUI_PARITY_FIX_REPORT.md  CONTRIBUTING.md  Makefile  OAUTH_ANALYSIS.md  PRODUCTION_TEST_REPORT.md  README.md  RELEASE_CHECKLIST_v1.md  TELEMETRY_IMPLEMENTATION_STATUS.md  TEST_IMPLEMENTATION_COMPLETE.md  UX_DX_REQUIREMENTS.md  VERSION  docker-compose.yml  go.mod  install.sh  package-lock.json  package.json  tsconfig.json  wrangler.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  cli-login-test.yml  deploy-web.yml  release.yml  test.yml
.sisyphus/: ralph-loop.local.md
.taskmaster/docs/: effect-ts-migration-prd.md
.taskmaster/tasks/: tasks.json
.trae/documents/: Pryx PRD (Clawdbot + OpenCode).md
apps/host/: Cargo.toml  Cargo_test.toml  tauri.conf.json
apps/host/src/: lib.rs  sidecar.rs  sidecar_manager.rs  sidecar_tests.rs  tests.rs
apps/host/src-tauri/src/: commands.rs  main.rs  permissions.rs  tray.rs
apps/host/src/server/: auth.rs  handlers.rs  mod.rs  routes.rs  websocket.rs
apps/host/src/sidecar/: mod.rs  mod_test.rs  permissions.rs  process.rs  tests.rs
apps/local-web/: index.html  package-lock.json  package.json  vite.config.ts
apps/runtime/: CLI_TESTING_STRATEGY.md  E2E_TESTING_STRATEGY.md  E2E_TEST_SUMMARY.md  Makefile  Makefile.test  TESTING_SUMMARY.md  TEST_COVERAGE_REPORT.md  coverage.out  go.mod  go.sum  pryx.db
apps/tui/: EFFECTTS_MIGRATION_AUDIT.md  KEYBINDINGS.md  TUI_FIX_PLAN.md  bunfig.toml  index.tsx  manual-test.ts  package.json  tsconfig.json
apps/web/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  schema.sql  vitest.config.ts  worker.ts  wrangler.toml
docs/: CLI_FEATURES.md  CONTRIBUTING.md  DYNAMIC_PORTS.md  TESTING.md  memory.md  providers.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
docs/development/: OAUTH_IMPLEMENTATION.md
docs/plan/: plan-a.md  plan-b.md
docs/prd/: PRD-UPDATES.md  README.md  agent-interoperability.md  prd-v2.md  prd.md  pryx-mesh-design.md
docs/reports/: BEADS_TASKS_ANALYSIS.md  FINAL_TEST_REPORT.md  (+2 more)
host/: Cargo.toml
host/src-tauri/src/: main.rs
runtime/: go.mod  go.sum
scripts/: build-bundles.sh  build-release.sh  bump-version.sh  check-installer-sync.sh  dev-runner.sh  install.sh  tui-runner-debug.sh  tui-runner.sh
tui/: index.tsx  package.json  tsconfig.json
(+382 files in other folders)
