[package]
name = "pryx-host"
version = "0.1.0"
edition = "2021"

[lib]
name = "pryx_host"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1.0"
libc = "0.2"
thiserror = "1.0"
env_logger = "0.11"
rand = "0.8"
once_cell = "1.19"
dirs = "5"

# HTTP Server
axum = { version = "0.7", features = ["ws", "json"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
mime_guess = "2.0"

[dev-dependencies]
# Testing frameworks
env_logger = "0.11"

[build-dependencies]
tauri-build = "2"

[[bin]]
name = "pryx-host"
path = "src-tauri/src/main.rs"
